@@ -1,8 +1,18 @@
+GDAL Calculations 1.0 2014-06-19 (AEST)
+=======================================
+Additions
+---------
+* Env: add tempoptions environment option
+
+Fixes
+-----
+* Fix errors with _some_ numpy ufuncs - Issue #4
+
 GDAL Calculations 0.9 2014-03-12 (AEST)
 =======================================
 Fixes
 -----
-* Fix error with unsupported gdal.GRA_Average resampling in gdal<1.10 
+* Fix error with unsupported gdal.GRA_Average resampling in gdal<1.10
 
 GDAL Calculations 0.8 2013-11-02 (AEST)
 =======================================
